Update 0.0.1 release