@@ -14,13 +14,24 @@ SHA-256 download, install  ◄────►  Serves index and HEAD/Range downl
 The client ships with `cilexec-app.jar`. The server is a standalone fat JAR that runs on
 macOS, Linux, and Windows with `java -jar` and depends on neither Python, Bash, nor Docker.
 
-## Building and Starting the Server
+## Starting the Server
+
+With no options, the server starts its interactive management console and serves HTTP in
+the background. The console can list, publish, and unpublish packages; closing it stops
+the HTTP service:
+
+```bash
+java --enable-native-access=ALL-UNNAMED -jar dist/cilexec-market-server.jar
+```
+
+Use `--headless` for the foreground HTTP-only mode intended for systemd and containers:
 
 ```bash
 java --enable-native-access=ALL-UNNAMED \
   -jar dist/cilexec-market-server.jar \
   --repository dist/repository \
-  --catalog dist/catalog.json
+  --catalog dist/catalog.json \
+  --headless
 ```
 
 Windows PowerShell uses the same JAR:
@@ -52,27 +63,32 @@ repository and catalog and exit immediately without listening on any port.
 | --- | --- |
 | `GET/HEAD /market/v1/index.json` | Returns the index of all published packages. |
 | `GET/HEAD /market/v1/{sha256}` | Downloads the immutable `.db` identified by a full SHA-256. |
+| `POST /market/v1/publish` | Publishes a `.db` uploaded with a valid Bearer publish token. |
 
 Package downloads support a single explicit `Range: bytes=start-end`, `ETag`, `If-Range`,
 `Content-Length`, and `416` end-of-file probing, matching the Runtime's 4 MiB persisted
 chunked download. `v1` is the market HTTP protocol major version, not a package version.
 
-`dist/catalog.json` is the only publication manifest. Files present in the repository but
-not listed in the manifest are never listed for sale. On startup the server rejects
+`dist/catalog.json` is the publication manifest. Files present in the repository but not
+listed in the manifest are never listed for sale. On startup the server rejects
 symlinks, path escapes, packages larger than 64 MiB, SQLite databases that are not format 2,
 coordinates that disagree with their path, invalid dependency hashes, and duplicate
 hashes. Size and SHA-256 are rechecked before every download.
 
 The server does not need a restart for new packages. Every index request re-reads and fully
-validates the repository, then atomically replaces the in-memory snapshot. A publisher must
-first place the new `.db` in its final version directory and only then update
-`catalog.json` with an atomic rename; published content-hash files must never be
-overwritten. If validation fails, index requests return `503`, an existing valid snapshot
-is never replaced by a half-built one, and in-flight SHA-256 downloads do not switch files.
+validates the repository, then atomically replaces the in-memory snapshot. For manual
+catalog management, first place the new `.db` in its final version directory and only then
+update `catalog.json` with an atomic rename; published content-hash files must never be
+overwritten. The console and authenticated publish endpoint perform this publication flow.
+If validation fails, index requests return `503`, an existing valid snapshot is never
+replaced by a half-built one, and in-flight SHA-256 downloads do not switch files.
 
 The `sha256` in the index is the 64-digit lowercase SHA-256 of the complete `.db` file and
 doubles as package ID, download path, and dependency ID. It is a content identity, not a
-signature or publisher identity.
+signature or publisher identity. `POST /market/v1/publish` accepts one raw `.db` body up to
+64 MiB with `Authorization: Bearer <token>` and a `Content-Length`; it returns `201` with
+the coordinate, SHA-256, byte count, and stored path. Optional `summary`, `description`,
+and `tags` query parameters override package metadata.
 
 ## Built-in Client
 
@@ -94,12 +110,12 @@ tells you explicitly to call `market.configure(...)`.
 | `market.configure(origin)` | Sets the current user's HTTP/HTTPS mirror origin. |
 | `market.origin()` | Shows the effective mirror origin. |
 | `market.update()` | Downloads, verifies, and persists the full index. |
-| `market.search(text)` | Prefix-searches package name, namespace, type, tags, and description words; versions do not participate in search. |
+| `market.search(text)` | Uses whitespace-separated AND terms. Each term prefix-searches package name, namespace, kind, `namespace/name`, tags, and summary/description words. A term of at least eight characters can prefix-match the package SHA-256; versions do not participate in search. |
 | `market.info(sha256)` | Returns one full package record, or `null` if absent. |
 | `market.download(sha256)` | Downloads in chunks and recomputes the full-file SHA-256. |
 | `market.install(sha256)` | Recursively installs exact-hash dependencies; identity is the SHA-256, so a different hash is a different package. |
 | `market.list()` | Lists installed package SHA-256s and their coordinates. |
-| `market.uninstall(sha256)` | Delegates to the core package uninstaller: removes the private data space, installation records, process bindings, and globally unreferenced release payloads; additionally deletes the market download cache and receipt. Ordinary user documents and other users' installations are never removed. |
+| `market.uninstall(sha256)` | Delegates to the core package uninstaller, then removes the market download cache and receipt. It has no force option, so active process bindings or dependent current-user roots block removal. On success it removes private data, installation records, process bindings, orphan dependencies, and globally unreferenced release payloads. Ordinary user documents and other users' installations are never removed. |
 | `market.help()` | Returns function help. |
 | `market.run()` | Returns the client version and help without requiring a configured origin. |
 
@@ -115,7 +131,7 @@ editor.open("notes.txt")
 ```
 
 The index cache lives at `/market/index.json` in the current user's VFS, downloads at
-`/market/packages/{sha256}.db`, and market install credentials at
+`/market/packages/{sha256}.db`, and market installation receipts at
 `/market/installed.json`. Ordinary users cannot see these three kinds of data of other
 users.
 
@@ -127,8 +143,8 @@ declaration, and the exact dependency graph. The market package limit is 64 MiB;
 ordinary single-VFS-file limit remains 1 GiB.
 
 Downloaded `.db` files under `/market/packages/` are registered as managed artifacts in
-the database. Uninstallation deletes them and reports the count as `cacheFilesRemoved`;
-ordinary user files are never registered or touched.
+the database. After a successful uninstall, the client deletes them and reports the count
+as `cacheFilesRemoved`; ordinary user files are never registered or touched.
 
 ## Private Package Data
 
@@ -175,6 +191,35 @@ undeclared usage fails the audit.
 
 ## Publishing Packages
 
+Local operators can publish through the interactive console, use `publish <file.db>` and
+follow its metadata prompts, or use `publish <file.db> --summary TEXT --description TEXT
+--tags a,b` to publish without prompts. A one-shot local publish validates the package,
+uses its package metadata, publishes it, and exits:
+
+```bash
+java --enable-native-access=ALL-UNNAMED -jar dist/cilexec-market-server.jar \
+  --publish /path/to/package.db
+```
+
+For remote publishing, create a token. Only its SHA-256 digest is stored, and the
+plaintext token is printed once. `--token list` lists token names and `--token remove NAME`
+revokes one; token changes take effect for a running server immediately.
+
+```bash
+java --enable-native-access=ALL-UNNAMED -jar dist/cilexec-market-server.jar \
+  --token add developer --tokens /path/to/tokens.json
+```
+
+Upload with the bundled helper, passing `--token` or setting `CILEXEC_MARKET_TOKEN`:
+
+```bash
+python3 tools/MarketPublish.py --url https://market.example.com \
+  --token <token> --summary "Text editor" --tags editor,ui /path/to/package.db
+```
+
+Use HTTPS or a trusted private network for tokens. The authenticated HTTP endpoint only
+publishes; unpublishing remains a local interactive-console operation.
+
 A formal release is built from the project root:
 
 ```bash
@@ -196,9 +241,10 @@ python3 tools/PackageBuild.py dist/editor editor.db
 ```
 
 The builder depends on neither the CilExec JAR, Docker, nor a database service and produces
-an immutable `editor.db`; it does not publish anything. Let the release flow generate the
-official repository path and catalog. When the content at the same coordinate changes, the
-package version must be incremented.
+an immutable `editor.db`; it requires Python 3 with the standard `sqlite3` module and does
+not publish anything. Let the release flow generate the official repository path and
+catalog. When the content at the same coordinate changes, the package version must be
+incremented.
 
 Every dependency is an exact distribution-file SHA-256:
 
@@ -222,8 +268,9 @@ coordinates never participate in dependency resolution; dependencies are exact d
   origin; market configuration does not bypass the network policy.
 - The server concurrency defaults to 16 and is tunable with `--workers 1..256`; exceeding
   the limit returns `503` immediately.
-- The server repository is read-only: there are no upload, delete, login, or dynamic
-  publishing endpoints.
+- The server provides no unauthenticated upload, delete, or login endpoint. The only
+  remote mutation endpoint is authenticated `POST /market/v1/publish`; local console
+  commands manage publication and unpublication.
 - The package signature system has been fully removed; the security boundary is the
   controlled publication manifest, HTTPS, exact SHA-256, and the Runtime's package
   structure/capability validation.
